--- a/admin-php/values.yaml
+++ b/admin-php/values.yaml
@@ -82,5 +82,8 @@ tolerations: []
 affinity: {}
 
 mysql:
-  auth.rootPassword: root
-  auth.database: crud_2019
+  auth:
+    rootPassword: root
+    database: crud_2019
+    password: root
+    username: crud
