--- a/httpd/values.yaml
+++ b/httpd/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: image-registry.openshift-image-registry.svc:5000/openshift/httpd
+  repository: registry.redhat.io/rhel8/httpd-24
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
